--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="col-md-2 userlist">
             <div class="panel-heading">
-                <span class="glyphicon glyphicon-user"></span> Online ({{ connectedUsers.length }})
+                <span class="glyphicon glyphicon-user"></span> Connectés ({{ connectedUsers.length }})
             </div>
             <ul class="chat">
                 <li v-for="user in connectedUsers">
@@ -27,9 +27,6 @@
         <div class="col-md-10">
             <div id="livechat-container">
                 <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <span class="glyphicon glyphicon-comment"></span>&nbsp;Lets Chat
-                    </div>
                     <div class="panel-body">
                         <ul class="chat" id="messages">
                             <li v-for="message in messages" class="left clearfix">
@@ -56,7 +53,8 @@
 
                     <div class="panel-footer">
                         <form @submit.prevent="send">
-                            <input v-model="message.text" v-on:keyup="usersAreTyping" v-on:keyup.13="stoppedTyping('13')" v-on:keyup.8="stoppedTyping('8')" type="text" class="form-control input-lg" placeholder="Type chat here" />
+                            <span class="glyphicon glyphicon-comment"></span>&nbsp;
+                            <input v-model="message.text" v-on:keyup="usersAreTyping" v-on:keyup.13="stoppedTyping('13')" v-on:keyup.8="stoppedTyping('8')" type="text" class="form-control input-lg" placeholder="Votre message" />
                         </form>
 
                     </div>
